--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
   web:
     build: .
     command: python manage.py runserver 0.0.0.0:8000
-    volumens:
+    volumes:
       - .:/usr/src/app
     ports:
       - "8000:8000"
